; ModuleID = '/home/carl/AnghaBench/vlc/test/modules/packetizer/extr_helpers.c_run_annexb_sets.c'
source_filename = "/home/carl/AnghaBench/vlc/test/modules/packetizer/extr_helpers.c_run_annexb_sets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.results_s = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"checking bits code:\0A\00", align 1
@startcode_FindAnnexB_Bits = common dso_local global i64 0, align 8
@startcode_FindAnnexB = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"checking asm:\0A\00", align 1
@.str.2 = private unnamed_addr constant [34 x i8] c"asm not built in, skipping test:\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, %struct.results_s*, i64, i32)* @run_annexb_sets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run_annexb_sets(i32* %0, i32* %1, %struct.results_s* %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.results_s*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store %struct.results_s* %2, %struct.results_s** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %14 = load i32*, i32** %7, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load %struct.results_s*, %struct.results_s** %9, align 8
  %17 = load i64, i64* %10, align 8
  %18 = load i32, i32* %11, align 4
  %19 = load i64, i64* @startcode_FindAnnexB_Bits, align 8
  %20 = call i32 @check_set(i32* %14, i32* %15, %struct.results_s* %16, i64 %17, i32 %18, i64 %19)
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %12, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %5
  %24 = load i32, i32* %12, align 4
  store i32 %24, i32* %6, align 4
  br label %46

25:                                               ; preds = %5
  %26 = load i64, i64* @startcode_FindAnnexB_Bits, align 8
  %27 = load i64, i64* @startcode_FindAnnexB, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %43

29:                                               ; preds = %25
  %30 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = load %struct.results_s*, %struct.results_s** %9, align 8
  %34 = load i64, i64* %10, align 8
  %35 = load i32, i32* %11, align 4
  %36 = load i64, i64* @startcode_FindAnnexB, align 8
  %37 = call i32 @check_set(i32* %31, i32* %32, %struct.results_s* %33, i64 %34, i32 %35, i64 %36)
  store i32 %37, i32* %12, align 4
  %38 = load i32, i32* %12, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %29
  %41 = load i32, i32* %12, align 4
  store i32 %41, i32* %6, align 4
  br label %46

42:                                               ; preds = %29
  br label %45

43:                                               ; preds = %25
  %44 = call i32 @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0))
  br label %45

45:                                               ; preds = %43, %42
  store i32 0, i32* %6, align 4
  br label %46

46:                                               ; preds = %45, %40, %23
  %47 = load i32, i32* %6, align 4
  ret i32 %47
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @check_set(i32*, i32*, %struct.results_s*, i64, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
